yaml-manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2025-07-21T07:49:47Z"
  generation: 1
  labels:
    app: 3py-app
  name: 3py-app
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: 3py-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: 3py-app
    spec:
      containers:
      - image: aumthakkar/3py-app:v1
        imagePullPolicy: IfNotPresent
        name: 3pyapp
        ports:
        - containerPort: 5000
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
